--- a/roles/falcon_installation/tasks/install.yml
+++ b/roles/falcon_installation/tasks/install.yml
@@ -82,8 +82,8 @@
   - name: CrowdStrike Falcon | Associated Falcon Sensor with your Customer ID (CID) Using Provisioning Token
     command: "/opt/CrowdStrike/falconctl -s -f --cid={{ falcon_cid }} --provisioning-token={{ falcon_provisioning_token }}"
     when:
-      - falcon_provisioning_token
-      - falcon_cid
+      - falcon_provisioning_token is defined
+      - falcon_cid is defined
       - ansible_facts.packages
       - installed_sensor in ansible_facts.packages
       - ansible_distribution != "MacOSX"
@@ -102,7 +102,7 @@
       state: started
       enabled: yes
     when:
-      - falcon_cid
+      - falcon_cid is defined
       - installed_sensor in ansible_facts.packages
 
   - name: CrowdStrike Falcon | Starting Falcon Sensor (macOS)
