--- a/roles/falcon_installation/tasks/main.yml
+++ b/roles/falcon_installation/tasks/main.yml
@@ -2,12 +2,23 @@
 # tasks file for falcon_installation
 - block:
   - include_tasks: uninstall.yml
-  when: falcon_uninstall
+  when:
+    - falcon_uninstall
+    - ansible_os_family != "Windows"
   become: true
   become_user: root
 
 - block:
-    - include_tasks: preinstall.yml
+  - include_tasks: win_uninstall.yml
+  when:
+    - falcon_uninstall
+    - ansible_os_family == "Windows"
+  become: true
+  become_method: "{{ falcon_windows_become_method }}"
+  become_user: "{{ falcon_windows_become_user }}"
+
+- block:
+  - include_tasks: preinstall.yml
   when:
     - not falcon_uninstall
 
@@ -16,16 +27,35 @@
   when:
     - not falcon_uninstall
     - falcon_install_method == "url"
+    - ansible_os_family != "Windows"
 
 - block:
   - include_tasks: api.yml
   when:
     - not falcon_uninstall
     - falcon_install_method == "api"
+    - ansible_os_family != "Windows"
+
+- block:
+    - include_tasks: win_api.yml
+  when:
+    - not falcon_uninstall
+    - falcon_install_method == "api"
+    - ansible_os_family == "Windows"
 
 - block:
   - include_tasks: install.yml
   when:
     - not falcon_uninstall
+    - ansible_os_family != "Windows"
   become: true
   become_user: root
+
+- block:
+  - include_tasks: win_install.yml
+  when:
+    - not falcon_uninstall
+    - ansible_os_family == "Windows"
+  become: true
+  become_method: "{{ falcon_windows_become_method }}"
+  become_user: "{{ falcon_windows_become_user }}"
