--- a/roles/falcon_installation/tasks/preinstall.yml
+++ b/roles/falcon_installation/tasks/preinstall.yml
@@ -38,23 +38,46 @@
   set_fact:
      falcon_target_os: "{{ ansible_distribution }}"
      falcon_os_family: "{{ ansible_system | lower }}"
-  when: ansible_distribution in ["Ubuntu", "Debian", "SLES"]
+  when:
+  - ansible_os_family != "Windows"
+  - ansible_distribution in ["Ubuntu", "Debian", "SLES"]
+
+- name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Microsoft Windows"
+  set_fact:
+     falcon_target_os: "{{ ansible_os_family }}"
+     falcon_os_family: "{{ ansible_os_family | lower }}"
+  when: ansible_os_family == "Windows"
 
 - name: CrowdStrike Falcon | Set default sensor name
   set_fact:
     installed_sensor: falcon-sensor
   when:
+    - ansible_pkg_mgr is defined
     - ansible_pkg_mgr in linux_packagers
 
 - name: CrowdStrike Falcon | Set default sensor name for non-Windows installations
   set_fact:
-    non_win_pkg: "{{ installed_sensor }}"
+    falcon_sensor_pkg: "{{ installed_sensor }}"
   when:
+    - ansible_pkg_mgr is defined
     - ansible_pkg_mgr in linux_packagers
     - falcon_sensor_download is not defined
 
-- name: CrowdStrike Falcon | Verify Temporary Install Directory Exists
+- debug:
+    msg: "{{ ansible_os_family }}"
+
+- name: CrowdStrike Falcon | Verify Temporary Install Directory Exists (non-Windows)
   file: # noqa: risky-file-permissions,208      # We shouldn't try to change permissions if /tmp is used
     path: "{{ falcon_install_tmp_dir }}"
     state: directory
-  when: falcon_install_tmp_dir is defined
+  when:
+    - ansible_os_family == "Linux"
+    - falcon_install_tmp_dir is defined
+
+- name: CrowdStrike Falcon | Verify Temporary Install Directory Exists (Windows)
+  win_file: # noqa: risky-file-permissions,208      # We shouldn't try to change permissions if /tmp is used
+    path: "{{ falcon_install_tmp_dir }}"
+    state: directory
+  when:
+    - ansible_os_family == "Windows"
+    - falcon_install_tmp_dir is defined
