--- a/roles/falcon_installation/tasks/win_api.yml
+++ b/roles/falcon_installation/tasks/win_api.yml
@@ -1,11 +1,9 @@
 ---
 - name: CrowdStrike Falcon | Authenticate to CrowdStrike API
-  uri:
+  win_uri:
     url: "https://{{ falcon_api_url }}/oauth2/token"
     method: POST
-    body_format: json
-    body:
-      "client_id={{ falcon_api_client_id }}&client_secret={{ falcon_api_client_secret }}"
+    body: "client_id={{ falcon_api_client_id }}&client_secret={{ falcon_api_client_secret }}"
     return_content: true
     status_code: 201
     headers:
@@ -13,7 +11,7 @@
   register: falcon_api_oauth2_token
 
 - name: CrowdStrike Falcon | Detect Target CID Based on Credentials
-  uri:
+  win_uri:
     url: https://{{ falcon_api_url }}/sensors/queries/installers/ccid/v1
     method: GET
     return_content: true
@@ -23,7 +21,7 @@
   register: falcon_api_target_cid
 
 - name: CrowdStrike Falcon | Detect SHA256 of Latest Falcon Sensor
-  uri:
+  win_uri:
     url: "https://{{ falcon_api_url }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc&limit=1"
     method: GET
     return_content: true
@@ -32,7 +30,7 @@
   register: falcon_api_sha_hash
 
 - name: CrowdStrike Falcon | Detect Name of Latest Falcon Sensor
-  uri:
+  win_uri:
     url: "https://{{ falcon_api_url }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc&limit=1"
     method: GET
     return_content: true
@@ -41,10 +39,11 @@
   register: falcon_api_installer_version
 
 - name: CrowdStrike Falcon | Download Latest Sensor Installation Package
-  get_url:
+  win_get_url:
     url: https://{{ falcon_api_url }}/sensors/entities/download-installer/v1?id={{ falcon_api_sha_hash.json.resources[0].sha256 }}
-    dest: "{{ falcon_install_tmp_dir }}"
-    checksum: "sha256:{{ falcon_api_sha_hash.json.resources[0].sha256 }}"
+    dest: "{{ falcon_install_tmp_dir }}\\{{ falcon_api_installer_version.json.resources[0].name }}"
+    checksum: "{{ falcon_api_sha_hash.json.resources[0].sha256 }}"
+    checksum_algorithm: sha256
     headers:
       authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
   register: falcon_sensor_download
