--- a/roles/falcon_installation/tasks/preinstall.yml
+++ b/roles/falcon_installation/tasks/preinstall.yml
@@ -42,6 +42,13 @@
   - ansible_os_family != "Windows"
   - ansible_distribution in ["Ubuntu", "Debian", "SLES"]
 
+- name: CrowdStrike Falcon | Determine if Target OS Is MacOS
+  set_fact:
+    falcon_target_os: "macOS"
+    falcon_os_family: "mac"
+    falcon_path: "/Applications/Falcon.app/Contents/Resources/"
+  when: ansible_distribution == "MacOSX"
+
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Microsoft Windows"
   set_fact:
      falcon_target_os: "{{ ansible_os_family }}"
@@ -63,15 +70,12 @@
     - ansible_pkg_mgr in linux_packagers
     - falcon_sensor_download is not defined
 
-- debug:
-    msg: "{{ ansible_os_family }}"
-
 - name: CrowdStrike Falcon | Verify Temporary Install Directory Exists (non-Windows)
   file: # noqa: risky-file-permissions,208      # We shouldn't try to change permissions if /tmp is used
     path: "{{ falcon_install_tmp_dir }}"
     state: directory
   when:
-    - ansible_os_family == "Linux"
+    - ansible_os_family == "Linux" or ansible_system == "Darwin"
     - falcon_install_tmp_dir is defined
 
 - name: CrowdStrike Falcon | Verify Temporary Install Directory Exists (Windows)
@@ -81,3 +85,11 @@
   when:
     - ansible_os_family == "Windows"
     - falcon_install_tmp_dir is defined
+
+- name: CrowdStrike Falcon | Verify Falcon is not already installed (macOS)
+  stat:
+    path: "{{ falcon_path }}"
+  when:
+    - ansible_system == "Darwin"
+    - falcon_path is defined
+  register: falcon_already_installed
