--- a/roles/falcon_installation/tasks/preinstall.yml
+++ b/roles/falcon_installation/tasks/preinstall.yml
@@ -93,3 +93,9 @@
     - ansible_system == "Darwin"
     - falcon_path is defined
   register: falcon_already_installed
+
+- name: CrowdStrike Falcon | Set service state for Primary Images
+  set_fact:
+    falcon_service_state: stopped
+  when:
+    - falcon_remove_agent_id
