--- a/roles/falcon_installation/tasks/api.yml
+++ b/roles/falcon_installation/tasks/api.yml
@@ -22,14 +22,18 @@
       Content-Type: application/json
   register: falcon_api_target_cid
 
-- name: CrowdStrike Falcon | Detect SHA256 of Latest Falcon Sensor
+- name: CrowdStrike Falcon | Get list of all Falcon sensors
   uri:
-    url: "https://{{ falcon_api_url }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc&limit=1"
+    url: "https://{{ falcon_api_url }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc"
     method: GET
     return_content: true
     headers:
       authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
-  register: falcon_api_sha_hash
+  register: falcon_api_installer_list
+
+- name: CrowdStrike Falcon | Get SHA256 hash of Falcon installer for the required OS Version
+  set_fact:
+    falcon_api_sha_hash: "{{ falcon_api_installer_list.json.resources | selectattr('os_version', 'equalto', ansible_distribution_major_version ) }}"
 
 - name: CrowdStrike Falcon | Detect Name of Latest Falcon Sensor
   uri:
@@ -42,9 +46,9 @@
 
 - name: CrowdStrike Falcon | Download Latest Sensor Installation Package
   get_url:
-    url: https://{{ falcon_api_url }}/sensors/entities/download-installer/v1?id={{ falcon_api_sha_hash.json.resources[0].sha256 }}
+    url: "https://{{ falcon_api_url }}/sensors/entities/download-installer/v1?id={{ falcon_api_sha_hash[0].sha256 }}"
     dest: "{{ falcon_install_tmp_dir }}"
-    checksum: "sha256:{{ falcon_api_sha_hash.json.resources[0].sha256 }}"
+    checksum: "sha256:{{ falcon_api_sha_hash[0].sha256 }}"
     headers:
       authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
   register: falcon_sensor_download
