--- a/roles/falcon_installation/tasks/api.yml
+++ b/roles/falcon_installation/tasks/api.yml
@@ -1,6 +1,6 @@
 ---
 - name: CrowdStrike Falcon | Authenticate to CrowdStrike API
-  uri:
+  ansible.builtin.uri:
     url: "https://{{ falcon_cloud }}/oauth2/token"
     method: POST
     body_format: json
@@ -13,7 +13,7 @@
   register: falcon_api_oauth2_token
 
 - name: CrowdStrike Falcon | Detect Target CID Based on Credentials
-  uri:
+  ansible.builtin.uri:
     url: https://{{ falcon_cloud }}/sensors/queries/installers/ccid/v1
     method: GET
     return_content: true
@@ -27,7 +27,7 @@
     falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"' }}"
 
 - name: CrowdStrike Falcon | Get list of filtered Falcon sensors
-  uri:
+  ansible.builtin.uri:
     url: "https://{{ falcon_cloud }}/sensors/combined/installers/v1?filter={{ falcon_os_query | urlencode }}"
     method: GET
     return_content: true
@@ -37,7 +37,7 @@
   register: falcon_api_installer_list
 
 - name: CrowdStrike Falcon | Download Falcon Sensor Installation Package
-  get_url:
+  ansible.builtin.get_url:
     url: "https://{{ falcon_cloud }}/sensors/entities/download-installer/v1?id={{ falcon_api_installer_list.json.resources[falcon_sensor_version | int].sha256 }}"
     dest: "{{ falcon_install_tmp_dir }}"
     checksum: "sha256:{{ falcon_api_installer_list.json.resources[falcon_sensor_version | int].sha256 }}"
@@ -46,10 +46,10 @@
   register: falcon_sensor_download
 
 - name: CrowdStrike Falcon | Set CID received from API
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_cid: "{{ falcon_api_target_cid.json.resources[0] }}"
   when: not falcon_cid
 
 - name: CrowdStrike Falcon | Set full file download path
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_sensor_pkg: "{{ falcon_sensor_download.dest }}"
