--- a/roles/falcon_installation/tasks/preinstall.yml
+++ b/roles/falcon_installation/tasks/preinstall.yml
@@ -1,48 +1,48 @@
 ---
 - block:
   - name: "CrowdStrike Falcon | Validate Required API URL Is Defined"
-    fail:
+    ansible.builtin.fail:
       msg: "falcon_cloud is not configured! Please configure falcon_cloud and re-run the installation again!"
     when: not falcon_cloud
 
   - name: "CrowdStrike Falcon | Validate CrowdStrike API Client ID Is Defined"
-    fail:
+    ansible.builtin.fail:
       msg: "falcon_client_id is not configured! Please configure falcon_client_id and re-run the installation again!"
     when: not falcon_client_id
 
   - name: "CrowdStrike Falcon | Validate CrowdStrike API Client Secret Is Defined"
-    fail:
+    ansible.builtin.fail:
       msg: "falcon_client_secret is not configured! Please configure falcon_client_secret and re-run the installation again!"
     when: not falcon_client_secret
 
   - name: "CrowdStrike Falcon | Validate CrowdStrike Falcon Sensor version is correctly set"
-    fail:
+    ansible.builtin.fail:
       msg: "falcon_sensor_version must be an integer between 0 and 5 inclusive!"
     when: falcon_sensor_version | int < 0 or falcon_sensor_version | int > 5
 
   when: falcon_install_method == "api"
 
 - name: "CrowdStrike Falcon | Configure Python Interpreter for older Linux OSes"
-  set_fact:
+  ansible.builtin.set_fact:
     ansible_python_interpreter: /usr/bin/python
   when: ansible_distribution == "Amazon"
 
 - name: "CrowdStrike Falcon | Determine if Endpoint Operating System Is RHEL, CentOS, or Oracle Linux"
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_target_os: RHEL/CentOS/Oracle
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "{{ ansible_distribution_major_version }}"
   when: ansible_os_family == "RedHat"
 
 - name: "CrowdStrike Falcon | Determine if Target OS Is Amazon Linux"
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_target_os: "Amazon Linux"
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "{{ ansible_distribution_major_version }}"
   when: ansible_distribution == "Amazon"
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Debian"
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_target_os: "{{ ansible_distribution }}"
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "9/10"
@@ -50,7 +50,7 @@
     - ansible_distribution == "Debian"
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is SLES"
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_target_os: "{{ ansible_distribution }}"
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "{{ ansible_distribution_major_version }}"
@@ -58,7 +58,7 @@
     - ansible_distribution == "SLES"
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Ubuntu"
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_target_os: "{{ ansible_distribution }}"
     falcon_os_family: "{{ ansible_system | lower }}"
     falcon_os_version: "16/18/20"
@@ -66,7 +66,7 @@
     - ansible_distribution == "Ubuntu"
 
 - name: CrowdStrike Falcon | Determine if Target OS Is MacOS
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_target_os: "macOS"
     falcon_os_family: "mac"
     falcon_path: "/Applications/Falcon.app/Contents/Resources/"
@@ -74,21 +74,21 @@
   when: ansible_distribution == "MacOSX"
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Microsoft Windows"
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_target_os: "{{ ansible_os_family }}"
     falcon_os_family: "{{ ansible_os_family | lower }}"
     falcon_os_version: ""
   when: ansible_os_family == "Windows"
 
 - name: CrowdStrike Falcon | Set default sensor name
-  set_fact:
+  ansible.builtin.set_fact:
     installed_sensor: falcon-sensor
   when:
     - ansible_pkg_mgr is defined
     - ansible_pkg_mgr in linux_packagers
 
 - name: CrowdStrike Falcon | Set default sensor name for non-Windows installations
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_sensor_pkg: "{{ installed_sensor }}"
   when:
     - ansible_pkg_mgr is defined
@@ -96,7 +96,7 @@
     - falcon_sensor_download is not defined
 
 - name: CrowdStrike Falcon | Verify Temporary Install Directory Exists (non-Windows)
-  file: # noqa: risky-file-permissions,208      # We shouldn't try to change permissions if /tmp is used
+  ansible.builtin.file: # noqa: risky-file-permissions,208      # We shouldn't try to change permissions if /tmp is used
     path: "{{ falcon_install_tmp_dir }}"
     state: directory
   when:
@@ -104,7 +104,7 @@
     - falcon_install_tmp_dir is defined
 
 - name: CrowdStrike Falcon | Verify Temporary Install Directory Exists (Windows)
-  win_file: # noqa: risky-file-permissions,208      # We shouldn't try to change permissions if /tmp is used
+  ansible.windows.win_file: # noqa: risky-file-permissions,208      # We shouldn't try to change permissions if /tmp is used
     path: "{{ falcon_windows_tmp_dir }}"
     state: directory
   when:
@@ -112,7 +112,7 @@
     - falcon_windows_tmp_dir is defined
 
 - name: CrowdStrike Falcon | Verify Falcon is not already installed (macOS)
-  stat:
+  ansible.builtin.stat:
     path: "{{ falcon_path }}"
   when:
     - ansible_system == "Darwin"
@@ -120,7 +120,7 @@
   register: falcon_already_installed
 
 - name: CrowdStrike Falcon | Set service state for Primary Images
-  set_fact:
+  ansible.builtin.set_fact:
     falcon_service_state: stopped
   when:
     - falcon_remove_agent_id
