--- a/roles/falcon_installation/tasks/win_install.yml
+++ b/roles/falcon_installation/tasks/win_install.yml
@@ -1,7 +1,7 @@
 ---
 - block:
   - name: CrowdStrike Falcon | Install Falcon Sensor .exe Package (Windows)
-    win_package:
+    ansible.windows.win_package:
       path: "{{ falcon_sensor_pkg }}"
       state: present
       creates_service: csfalconservice
@@ -14,7 +14,7 @@
     until: falcon_installed is success
 
   - name: CrowdStrike Falcon Installer | Starting Falcon Sensor Service (Windows)
-    win_service:
+    ansible.windows.win_service:
       name: csfalconservice
       state: "{{ falcon_service_state | default('started') }}"
       start_mode: auto
@@ -22,7 +22,7 @@
       - falcon_cid is defined
 
   - name: CrowdStrike Falcon Installer | Remove any AID Key
-    win_regedit:
+    ansible.windows.win_regedit:
       path: "{{ item }}"
       state: absent
       delete_key: true
