--- a/roles/falcon_uninstall/tasks/win_uninstall.yml
+++ b/roles/falcon_uninstall/tasks/win_uninstall.yml
@@ -1,14 +1,14 @@
 ---
 - block:
   - name: CrowdStrike Falcon | Find Windows installer in Package Cache
-    win_find:
+    ansible.windows.win_find:
       paths: C:\ProgramData\Package Cache
       patterns: WindowsSensor.exe
       recurse: yes
     register: falcon_win_sensor_cache
 
   - name: CrowdStrike Falcon | Remove Falcon Sensor (Windows)
-    win_package:
+    ansible.windows.win_package:
       path: "{{ falcon_win_sensor_cache.files[0].path }}"
       state: absent
       creates_service: csfalconservice
