--- a/molecule/falcon_installation/converge.yml
+++ b/molecule/falcon_installation/converge.yml
@@ -2,7 +2,7 @@
 - name: Converge
   hosts: all
   vars:
-    falcon_api_client_id: "{{ lookup('env', 'FALCON_CID') }}"
-    falcon_api_client_secret: "{{ lookup('env', 'FALCON_SECRET') }}"
+    falcon_client_id: "{{ lookup('env', 'FALCON_CLIENT_ID') }}"
+    falcon_client_secret: "{{ lookup('env', 'FALCON_CLIENT_SECRET') }}"
   roles:
     - role: crowdstrike.falcon.falcon_installation
