--- a/roles/falcon_installation/tasks/api.yml
+++ b/roles/falcon_installation/tasks/api.yml
@@ -1,11 +1,11 @@
 ---
 - name: CrowdStrike Falcon | Authenticate to CrowdStrike API
   uri:
-    url: "https://{{ falcon_api_url }}/oauth2/token"
+    url: "https://{{ falcon_cloud }}/oauth2/token"
     method: POST
     body_format: json
     body:
-      "client_id={{ falcon_api_client_id }}&client_secret={{ falcon_api_client_secret }}"
+      "client_id={{ falcon_client_id }}&client_secret={{ falcon_client_secret }}"
     return_content: true
     status_code: 201
     headers:
@@ -14,7 +14,7 @@
 
 - name: CrowdStrike Falcon | Detect Target CID Based on Credentials
   uri:
-    url: https://{{ falcon_api_url }}/sensors/queries/installers/ccid/v1
+    url: https://{{ falcon_cloud }}/sensors/queries/installers/ccid/v1
     method: GET
     return_content: true
     headers:
@@ -24,7 +24,7 @@
 
 - name: CrowdStrike Falcon | Get list of all Falcon sensors
   uri:
-    url: "https://{{ falcon_api_url }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc"
+    url: "https://{{ falcon_cloud }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc"
     method: GET
     return_content: true
     headers:
@@ -37,7 +37,7 @@
 
 - name: CrowdStrike Falcon | Detect Name of Latest Falcon Sensor
   uri:
-    url: "https://{{ falcon_api_url }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc&limit=1"
+    url: "https://{{ falcon_cloud }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc&limit=1"
     method: GET
     return_content: true
     headers:
@@ -46,7 +46,7 @@
 
 - name: CrowdStrike Falcon | Download Latest Sensor Installation Package
   get_url:
-    url: "https://{{ falcon_api_url }}/sensors/entities/download-installer/v1?id={{ falcon_api_sha_hash[0].sha256 }}"
+    url: "https://{{ falcon_cloud }}/sensors/entities/download-installer/v1?id={{ falcon_api_sha_hash[0].sha256 }}"
     dest: "{{ falcon_install_tmp_dir }}"
     checksum: "sha256:{{ falcon_api_sha_hash[0].sha256 }}"
     headers:
