--- a/roles/falcon_installation/tasks/install.yml
+++ b/roles/falcon_installation/tasks/install.yml
@@ -21,21 +21,21 @@
   - name: CrowdStrike Falcon | Transfer CrowdStrike Falcon RPM GPG key file
     copy:
       src: "{{ falcon_gpg_key }}"
-      dest: "{{ falcon_gpg_key_dest }}"
+      dest: "{{ falcon_install_tmp_dir }}{{ falcon_gpg_key }}"
     when:
       - falcon_gpg_key_check
 
   - name: CrowdStrike Falcon | Import CrowdStrike Falcon RPM GPG key from file
     rpm_key:
       state: present
-      key: '{{ falcon_gpg_key_dest }}'
+      key: '{{ falcon_install_tmp_dir }}{{ falcon_gpg_key }}'
     when:
       - falcon_gpg_key_check
       - ansible_pkg_mgr in rpm_packagers
 
   - name: CrowdStrike Falcon | Import CrowdStrike Falcon APT GPG key from file
     apt_key:
-      file: '{{ falcon_gpg_key_dest }}'
+      file: '{{ falcon_install_tmp_dir }}{{ falcon_gpg_key }}'
       state: present
     when:
       - falcon_gpg_key_check
