--- a/roles/falcon_installation/tasks/preinstall.yml
+++ b/roles/falcon_installation/tasks/preinstall.yml
@@ -5,54 +5,79 @@
       msg: "falcon_cloud is not configured! Please configure falcon_cloud and re-run the installation again!"
     when: not falcon_cloud
 
-  - name: CrowdStrike Falcon | Validate CrowdStrike API Client ID Is Defined
+  - name: "CrowdStrike Falcon | Validate CrowdStrike API Client ID Is Defined"
     fail:
-      msg: falcon_client_id is not configured! Please configure falcon_client_id and re-run the installation again!
+      msg: "falcon_client_id is not configured! Please configure falcon_client_id and re-run the installation again!"
     when: not falcon_client_id
 
-  - name: CrowdStrike Falcon | Validate CrowdStrike API Client Secret Is Defined
+  - name: "CrowdStrike Falcon | Validate CrowdStrike API Client Secret Is Defined"
     fail:
-      msg: falcon_client_secret is not configured! Please configure falcon_client_secret and re-run the installation again!
+      msg: "falcon_client_secret is not configured! Please configure falcon_client_secret and re-run the installation again!"
     when: not falcon_client_secret
+
+  - name: "CrowdStrike Falcon | Validate CrowdStrike Falcon Sensor version is correctly set"
+    fail:
+      msg: "falcon_sensor_version must be an integer between 0 and 5 inclusive!"
+    when: falcon_sensor_version | int < 0 or falcon_sensor_version | int > 5
 
   when: falcon_install_method == "api"
 
-- name: CrowdStrike Falcon | Configure Python Interpreter for older Linux OSes
+- name: "CrowdStrike Falcon | Configure Python Interpreter for older Linux OSes"
   set_fact:
     ansible_python_interpreter: /usr/bin/python
   when: ansible_distribution == "Amazon"
 
-- name: CrowdStrike Falcon | Determine if Endpoint Operating System Is RHEL, CentOS, or Oracle Linux
+- name: "CrowdStrike Falcon | Determine if Endpoint Operating System Is RHEL, CentOS, or Oracle Linux"
   set_fact:
     falcon_target_os: RHEL/CentOS/Oracle
     falcon_os_family: "{{ ansible_system | lower }}"
+    falcon_os_version: "{{ ansible_distribution_major_version }}"
   when: ansible_os_family == "RedHat"
 
-- name: CrowdStrike Falcon | Determine if Target OS Is Amazon Linux
+- name: "CrowdStrike Falcon | Determine if Target OS Is Amazon Linux"
   set_fact:
-    falcon_target_os: "Amazon%20Linux"
+    falcon_target_os: "Amazon Linux"
     falcon_os_family: "{{ ansible_system | lower }}"
+    falcon_os_version: "{{ ansible_distribution_major_version }}"
   when: ansible_distribution == "Amazon"
 
-- name: "CrowdStrike Falcon | Endpoint Operating System Detected Is {{ ansible_distribution }}"
+- name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Debian"
   set_fact:
     falcon_target_os: "{{ ansible_distribution }}"
     falcon_os_family: "{{ ansible_system | lower }}"
+    falcon_os_version: "9/10"
   when:
-    - ansible_os_family != "Windows"
-    - ansible_distribution in ["Ubuntu", "Debian", "SLES"]
+    - ansible_distribution == "Debian"
+
+- name: "CrowdStrike Falcon | Endpoint Operating System Detected Is SLES"
+  set_fact:
+    falcon_target_os: "{{ ansible_distribution }}"
+    falcon_os_family: "{{ ansible_system | lower }}"
+    falcon_os_version: "{{ ansible_distribution_major_version }}"
+  when:
+    - ansible_distribution == "SLES"
+
+- name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Ubuntu"
+  set_fact:
+    falcon_target_os: "{{ ansible_distribution }}"
+    falcon_os_family: "{{ ansible_system | lower }}"
+    falcon_os_version: "16/18/20"
+  when:
+    - ansible_distribution == "Ubuntu"
 
 - name: CrowdStrike Falcon | Determine if Target OS Is MacOS
   set_fact:
     falcon_target_os: "macOS"
     falcon_os_family: "mac"
     falcon_path: "/Applications/Falcon.app/Contents/Resources/"
+    falcon_os_version: ""
   when: ansible_distribution == "MacOSX"
 
 - name: "CrowdStrike Falcon | Endpoint Operating System Detected Is Microsoft Windows"
   set_fact:
     falcon_target_os: "{{ ansible_os_family }}"
     falcon_os_family: "{{ ansible_os_family | lower }}"
+    falcon_os_version: ""
   when: ansible_os_family == "Windows"
 
 - name: CrowdStrike Falcon | Set default sensor name
