--- a/roles/falcon_installation/tasks/win_api.yml
+++ b/roles/falcon_installation/tasks/win_api.yml
@@ -20,29 +20,28 @@
       Content-Type: application/json
   register: falcon_api_target_cid
 
-- name: CrowdStrike Falcon | Detect SHA256 of Latest Falcon Sensor
+- name: "CrowdStrike Falcon | Build API Query"
+  set_fact:
+    falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"' }}"
+
+- name: CrowdStrike Falcon | Get list of filtered Falcon sensors
   win_uri:
-    url: "https://{{ falcon_cloud }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc&limit=1"
+    url: "https://{{ falcon_cloud }}/sensors/combined/installers/v1?filter={{ falcon_os_query | urlencode }}"
     method: GET
     return_content: true
     headers:
       authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
-  register: falcon_api_sha_hash
+      Content-Type: application/json
+  register: falcon_api_installer_list
 
-- name: CrowdStrike Falcon | Detect Name of Latest Falcon Sensor
-  win_uri:
-    url: "https://{{ falcon_cloud }}/sensors/combined/installers/v1?filter=platform%3A%22{{ falcon_os_family }}*%22%2Bos%3A%22{{ falcon_target_os }}%22&=&sort=version.desc&limit=1"
-    method: GET
-    return_content: true
-    headers:
-      authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
-  register: falcon_api_installer_version
+- debug:
+    msg: "{{ falcon_api_installer_list.json.resources[0] }}"
 
-- name: CrowdStrike Falcon | Download Latest Sensor Installation Package
+- name: CrowdStrike Falcon | Download Falcon Sensor Installation Package
   win_get_url:
-    url: https://{{ falcon_cloud }}/sensors/entities/download-installer/v1?id={{ falcon_api_sha_hash.json.resources[0].sha256 }}
-    dest: "{{ falcon_windows_tmp_dir }}\\{{ falcon_api_installer_version.json.resources[0].name }}"
-    checksum: "{{ falcon_api_sha_hash.json.resources[0].sha256 }}"
+    url: "https://{{ falcon_cloud }}/sensors/entities/download-installer/v1?id={{ falcon_api_installer_list.json.resources[falcon_sensor_version | int].sha256 }}"
+    dest: "{{ falcon_windows_tmp_dir }}\\{{ falcon_api_installer_list.json.resources[falcon_sensor_version | int].name }}"
+    checksum: "{{ falcon_api_installer_list.json.resources[0].sha256 }}"
     checksum_algorithm: sha256
     headers:
       authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
